--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
     "react-native-actions-sheet": "^0.9.2",
     "react-native-gesture-handler": "^2.15.0",
     "react-native-image-picker": "^7.1.0",
+    "react-native-modal": "^13.0.1",
+    "react-native-safe-area-context": "^4.9.0",
     "react-native-vector-icons": "^10.0.3",
-    "react-native-view-shot": "^3.8.0"
+    "react-native-view-shot": "^3.8.0",
+    "react-native-wheel-color-picker": "^1.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
