--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@miblanchard/react-native-slider": "^2.3.1",
     "@react-native-camera-roll/camera-roll": "^7.4.0",
     "@shopify/react-native-skia": "^0.1.238",
     "react": "18.2.0",
